--- a/flaskr/templates/index.html
+++ b/flaskr/templates/index.html
@@ -33,7 +33,7 @@
         }
         #turn {
             font-weight: bolder;
-            olor: rgb(180, 88, 134);
+            color: rgb(180, 88, 134);
         }
     </style>
     <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
